# lab-reports

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  Dockerfile  LICENSE  README.md  REPORT.md  REPORT1.md  REPORT10.md  REPORT11.md  REPORT2.md  REPORT3  REPORT3.md  REPORT4.md  REPORT5.md  REPORT6.md  REPORT7.md  REPORT8.md  REPORT9.md  report1.md  seminar1.cpp
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  demo  example1  example2  install_manifest.txt
_build/Testing/Temporary/: CTestCostData.txt
_build/_3rdParty/Hunter/: install-root-dir
_build/_3rdParty/Hunter/config-id/: config.cmake.NOLF
_build/_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
_logs/polly/clang-cxx14/: log-0.txt  log.txt
_logs/polly/default/: log-0.txt  log.txt
scripts/: activate
